05_squares/grade.txt
Grading at Mon Jul 23 15:45:12 UTC 2018
Trying to compile your code and link with squares_test.o
squares.c: In function ‘squares’:
squares.c:24:56: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
       if ((x >= x_offset) && (x <= (x_offset + size2)) &&
                                                        ^
squares.c: At top level:
squares.c:59:6: error: return type of ‘main’ is not ‘int’ [-Werror=main]
 void main(int argc, char* argv[]){
      ^
cc1: all warnings being treated as errors
Could not compile your code

Overall Grade: FAILED
